# Snooze

./: Cargo.toml  README.md  build.bat  jam.cbox
core/: Cargo.toml
core/src/: lib.rs
html_building/: index.html  index.js  package-lock.json  package.json
html_building/html5game/: ld50.js
src/: lib.rs  rope.rs
wasm/: Cargo.toml
wasm/src/: lib.rs  wasm_instant.rs
windows/: Cargo.toml  build.bat
windows/src/: lib.rs
