[package]
name = "ld50_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gms_binder = { path = "../gms_binder" }
rope_lib = { path = "../rope_lib" }
config-box = { path = "../config_box/core", features = ["windows-file-watcher"] }
froggy-rand = "0.2"
crossbeam-epoch = "0.9"

[lib]
crate-type = ["cdylib"]